--- a/frontend/ant-pwa/package.json
+++ b/frontend/ant-pwa/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "antd": "^3.5.1",
+    "jest-cli": "^22.4.3",
     "react": "^16.3.2",
     "react-app-rewire-less": "^2.1.1",
     "react-dom": "^16.3.2",
