--- a/frontend/mdc/package.json
+++ b/frontend/mdc/package.json
@@ -7,24 +7,35 @@
   },
   "license": "Apache-2.0",
   "devDependencies": {
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.22.1",
     "babel-loader": "^7.0.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-es3-member-expression-literals": "^6.22.0",
+    "babel-plugin-transform-es3-property-literals": "^6.22.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.1",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^0.28.0",
     "extract-loader": "^1.0.2",
     "file-loader": "^1.1.11",
     "node-sass": "^4.9.0",
     "sass-loader": "^6.0.4",
+    "serve": "^6.5.7",
     "webpack": "^3.0.0",
     "webpack-dev-server": "^2.4.3"
   },
   "dependencies": {
+    "@material-ui/core": "^1.0.0",
+    "@material-ui/icons": "^1.0.0",
     "@material/top-app-bar": "^0.35.0",
     "@material/typography": "^0.35.0",
     "classnames": "^2.2.5",
     "react": "^16.3.2",
-    "react-dom": "^16.3.2"
+    "react-dom": "^16.3.2",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2"
   }
 }
