--- a/frontend/ant-pwa/package.json
+++ b/frontend/ant-pwa/package.json
@@ -4,11 +4,8 @@
   "private": true,
   "dependencies": {
     "antd": "^3.5.1",
-    "jest-cli": "^22.4.3",
     "react": "^16.3.2",
-    "react-app-rewire-less": "^2.1.1",
-    "react-dom": "^16.3.2",
-    "react-scripts": "1.1.4"
+    "react-dom": "^16.3.2"
   },
   "scripts": {
     "start": "react-app-rewired start",
@@ -17,6 +14,9 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "jest-cli": "^22.4.3",
+    "react-app-rewire-less": "^2.1.1",
+    "react-scripts": "1.1.4",
     "babel-plugin-import": "^1.7.0",
     "react-app-rewired": "^1.5.2"
   }
