--- a/frontend/ant-pwa/package.json
+++ b/frontend/ant-pwa/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "antd": "^3.5.1",
     "react": "^16.3.2",
-    "react-dom": "^16.3.2"
+    "react-dom": "^16.3.2",
+    "react-facebook-login": "^4.0.1",
+    "react-google-button": "^0.5.3"
   },
   "scripts": {
     "start": "react-app-rewired start",
