--- a/frontend/ant-pwa/package.json
+++ b/frontend/ant-pwa/package.json
@@ -1,5 +1,6 @@
 {
   "name": "ant-pwa",
+  "homepage": "http://abishekk.github.io/sun_and_fun",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -13,13 +14,16 @@
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"    
   },
   "devDependencies": {
+    "babel-plugin-import": "^1.7.0",
+    "gh-pages": "^1.1.0",
     "jest-cli": "^22.4.3",
     "react-app-rewire-less": "^2.1.1",
-    "react-scripts": "1.1.4",
-    "babel-plugin-import": "^1.7.0",
-    "react-app-rewired": "^1.5.2"
+    "react-app-rewired": "^1.5.2",
+    "react-scripts": "1.1.4"
   }
 }
